Make container read only and run with non-root user